examples/errors/runtime_error_undefined_variable.lox
// This file demonstrates runtime error reporting
// Undefined variable access

var x = 10
print x + undefinedVariable
